<resources>
    <string name="app_name">ProyectoPlataformas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_usuario">Crear Usuario Hijo</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="correo">Correo</string>
    <string name="usuario_texto">Correo</string>
    <string name="correo_texto">Correo</string>
    <string name="nombre_texto">Nombre</string>
    <string name="contrasena_texto">Contraseña</string>
    <string name="usuario_inicio">Usuario</string>
    <string name="contasena_inicio">Contraseña</string>
    <string name="iniciar_secion">Iniciar Sesión</string>
    <string name="crear_usuario_padre">Crear Usuario Padre</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="nuevo_usuario_Padre">Nuevo Usuario Padre</string>
    <string name="nuevo_usuario_hijo">Nuevo Usuario Hijo</string>
    <string name="desempeño">Desempeño en las tareas de sus hijos:</string>
    <string name="santiago">Santiago:</string>
    <string name="ivania">Ivania</string>
    <string name="crear_tarea">Crear tarea</string>
    <string name="crear_hijo">crear hijo</string>
    <string name="tareas">Tareas</string>
    <string name="nombre_de_la_tarea">   Nombre de la tarea:</string>
    <string name="descripcion_de_la_tarea">   Descripción de la tarea:</string>
    <string name="inicio_sesion_hijo">Inicio sesión hijo</string>
    <string name="menu_padre">Menu Padre</string>
    <string name="nombre_hijo">Nombre del hijo</string>
</resources>